plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.76'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com"
    }
    maven { url 'https://modmaven.dev/' }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        url 'https://maven.aliyun.com/repository/public'
    }
    maven {
        url "https://cursemaven.com"
    }
    maven {
        name = "Curios"
        url = uri("https://maven.theillusivec4.top/")
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }

    // kubejs
    maven {
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }

    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }

}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            jvmArguments = ['-Xms6G','-Xmx8G']
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            jvmArguments = ['-Xms6G','-Xmx8G']
            programArgument ''
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {

    // 引入对拼音库的依赖 并将其打包到模组
    jarJar(implementation group: 'com.github.promeg', name: 'tinypinyin', version: '2.0.3'){
        version {
            // 您的模组实际兼容的版本范围。
            // 注意，您可能会收到一个**低于您首选版本**的版本。例如，如果另一个模组只兼容到 1.7.24，
            // 那么在运行时，您的模组可能会使用 1.7.24 版本。
            strictly '[2.0.3,)' //表示，大于等于2.5.0版本即可
            prefer '2.0.3' // 在您的开发环境中实际使用的版本
        }
    }
    // 必须要在此显式声明依赖，否则在运行时会找不到
    additionalRuntimeClasspath "com.github.promeg:tinypinyin:2.0.3"


    // 编译通用机械的api 以便使用化学品存储
    compileOnly "mekanism:Mekanism:${mekanism_version}:api"

    // EMI支持
    compileOnly "dev.emi:emi-neoforge:${emi_version}:api"
    runtimeOnly "dev.emi:emi-neoforge:${emi_version}"

    // JEI支持
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    //runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // 多态合成支持
    compileOnly "curse.maven:polymorph-388800:6451024"

    // AE支持
    compileOnly "org.appliedenergistics:appliedenergistics2:${ae_version}"
    compileOnly "curse.maven:applied-mekanistics-574300:5978711" // AE的通用机械附属
    compileOnly "curse.maven:applied-flux-965012:6649565" // 应用通量附属

    // 饰品栏支持
    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}+${minecraft_version}:api"

    // 在本模组的UI禁用IPN
    compileOnly "maven.modrinth:inventory-profiles-next:neoforge-1.21.1-2.1.9"

    // kubejs
    api("dev.latvian.mods:kubejs-neoforge:$kubejs_version")

    // 通用拼音搜索-在安装时自动使用它的拼音处理
    compileOnly "curse.maven:just-enough-characters-250702:6681787"

    // RS支持
    compileOnly "maven.modrinth:refined-storage:2.0.0-beta.7"
    runtimeOnly "maven.modrinth:refined-storage:2.0.0-beta.7"
    // RS 通用机械附属
    compileOnly "maven.modrinth:refined-storage-mekanism-integration:1.0.0"
    runtimeOnly "maven.modrinth:refined-storage-mekanism-integration:1.0.0"
    // RS Types附属
    compileOnly "curse.maven:refined-types-1327983:6904430"
    runtimeOnly "curse.maven:refined-types-1327983:6904430"

    // 工业先锋：灵魂涌动
    compileOnly "maven.modrinth:industrial-foregoing-souls:1.21-1.10.5"
    compileOnly "curse.maven:soulplied-energistics-1143614:6771121" // AE联动
    runtimeOnly "maven.modrinth:industrial-foregoing-souls:1.21-1.10.5"
    runtimeOnly "curse.maven:soulplied-energistics-1143614:6771121"

    // 新生魔艺
    compileOnly "maven.modrinth:ars-nouveau:5.10.3"
    compileOnly "maven.modrinth:ars-energistique:2.1.1-beta" // AE联动
    runtimeOnly "maven.modrinth:ars-nouveau:5.10.3"
    runtimeOnly "maven.modrinth:ars-energistique:2.1.1-beta"

    // 植物魔法支持
    compileOnly "dev.local:botania-neoforge:1.21.1-451-SNAPSHOT"
    runtimeOnly "dev.local:botania-neoforge:1.21.1-451-SNAPSHOT"

    // 精妙背包以及精妙存储调试
    runtimeOnly "curse.maven:sophisticated-backpacks-422301:6679417"
    runtimeOnly "curse.maven:sophisticated-storage-619320:6712033"
    runtimeOnly "curse.maven:sophisticated-core-618298:6680823"

}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
